--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -40,6 +40,15 @@ android {
         main.java.srcDirs += 'src/main/kotlin'
     }
 
+    signingConfigs{
+        release {
+            storeFile file('..\\eKidzeeAppKey.jks')
+            storePassword 'nikunj'
+            keyAlias = 'nikunj'
+            keyPassword 'nikunj'
+        }
+    }
+
     defaultConfig {
         // TODO: Specify your own unique Application ID (https://developer.android.com/studio/build/application-id.html).
         applicationId "com.zeelearn.literahub"
@@ -49,13 +58,19 @@ android {
         targetSdkVersion flutter.targetSdkVersion
         versionCode flutterVersionCode.toInteger()
         versionName flutterVersionName
+        multiDexEnabled true
+        signingConfig signingConfigs.release
     }
 
     buildTypes {
         release {
             // TODO: Add your own signing config for the release build.
             // Signing with the debug keys for now, so `flutter run --release` works.
-            signingConfig signingConfigs.debug
+            signingConfig signingConfigs.release
+            minifyEnabled true  // shrink
+            shrinkResources true
+            //buildConfigField "String", "SUPPORT_MAIL", "mishelpdesk@zeelearn.com"
+            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
 }
