--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -50,6 +50,7 @@ dependencies:
   hive: ^2.2.3
   hive_flutter: ^1.1.0
   flutter_webview_pro: ^3.0.1+4
+  external_app_launcher: ^4.0.0
 
 dev_dependencies:
   flutter_test:
