--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,21 +38,31 @@ dependencies:
   get: ^4.6.6
   get_storage: ^2.1.1
   responsive_framework: ^1.1.0
-  google_fonts: ^4.0.1
+  google_fonts: ^6.2.0
   lottie: ^3.0.0
   websafe_svg: ^3.0.0+5
   url_launcher: ^6.2.4
   flutter_easyloading: 3.0.5
   flutter_screenutil: ^5.8.3
   device_apps: ^2.2.0
-  firebase_core: ^2.27.2
+  firebase_core: ^3.1.0
   flutter_bloc: ^8.1.5
   hive: ^2.2.3
   hive_flutter: ^1.1.0
   flutter_webview_pro: ^3.0.1+4
   external_app_launcher: ^4.0.0
   saathi:
-    path: D:\Sudhir\flutterWorkspace\reseaarch\ZeeSathi\
+    path: D:\Sudhir\flutterWorkspace\ZllSaathiNative\ZeeSathi\
+
+dependency_overrides:
+  device_info_plus: ^10.0.0
+  flutter_quill: ^9.3.21
+  intl: ^0.19.0
+  http: ^1.1.2
+  file_picker: ^6.1.1
+  pdfx: ^2.6.0
+  photo_view: ^0.15.0
+  js: ^0.7.1
 
 dev_dependencies:
   flutter_test:
