--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -45,9 +45,9 @@ android {
 
     signingConfigs{
         release {
-            storeFile file('..\\zeelearn.jks')
+            storeFile file('..\\zeelearn_android.jks')
             storePassword 'zils@1234'
-            keyAlias = 'mlzs'
+            keyAlias = 'literiahub'
             keyPassword 'zils@1234'
         }
     }
@@ -59,7 +59,7 @@ android {
         // For more information, see: https://docs.flutter.dev/deployment/android#reviewing-the-gradle-build-configuration.
         minSdkVersion 23
         targetSdkVersion flutter.targetSdkVersion
-        versionCode 2
+        versionCode 3
         versionName flutterVersionName
         multiDexEnabled true
         signingConfig signingConfigs.release
