--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -51,8 +51,13 @@
 	</dict>
 	<key>BGTaskSchedulerPermittedIdentifiers</key>
 	<array>
-		<string>com.zeelearn.literahub</string>
+		<string>com.zeelearn.ekidzee</string>
 		<string>com.zeelearn.zllsaathi</string>
+	</array>
+	<key>LSApplicationQueriesSchemes</key>
+	<array>
+		<string>kidzeeApp</string>
+		<string>kidzee</string>
 	</array>
 	<key>NSCameraUsageDescription</key>
 	<string>This app needs camera access to scan QR codes</string>
