--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -59,8 +59,8 @@ android {
         // For more information, see: https://docs.flutter.dev/deployment/android#reviewing-the-gradle-build-configuration.
         minSdkVersion 23
         targetSdkVersion flutter.targetSdkVersion
-        versionCode 5
-        versionName flutterVersionName
+        versionCode 6
+        versionName '1.0'
         multiDexEnabled true
         signingConfig signingConfigs.release
     }
