--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -6,7 +6,7 @@
    <package android:name="com.zeelearn.mlzsv1" />
    <package android:name="com.innova.students_mlz_epfuture" />
    <package android:name="epfuture.innova.com.teacher_mlz" />
-   <package android:name="epfuture.innova.com.teacher_mlz" />
+   <package android:name="eplusreg.innova.com.teacher_mlz_epfuture" />
     <package android:name="com.zeelearn.mlzsapp" />
     <package android:name="com.zeelearn.mlzstapp" />
  </queries>
